ennesimo bugfix -.-